--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -3,15 +3,28 @@
 	xmlns="http://java.sun.com/xml/ns/javaee"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
-		http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
+http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
+
+<!--
+<description>SQL Test</description>
+
+<resource-ref>
+	<description>DB Connection</description>
+	<res-ref-name>jdbc/TestDB</res-ref-name>
+	<res-type>javax.sql.DataSource</res-type>
+	<res-auth>Container</res-auth>
+</resource-ref>
+-->
 
 <servlet>
-
+	<servlet-name>LoginServlet</servlet-name>
+	<servlet-class>control.LoginServlet</servlet-class>
 </servlet>
 
 
 <servlet-mapping>
-
+	<servlet-name>LoginServlet</servlet-name>
+	<url-pattern>/control/login</url-pattern>
 </servlet-mapping>
 
 </web-app>
