--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -5,22 +5,12 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 
-<!--
-<description>SQL Test</description>
-
-<resource-ref>
-	<description>DB Connection</description>
-	<res-ref-name>jdbc/TestDB</res-ref-name>
-	<res-type>javax.sql.DataSource</res-type>
-	<res-auth>Container</res-auth>
-</resource-ref>
--->
-
+<!-- SESSION RULES -->
 <session-config>
 	<session-timeout>10</session-timeout>
 </session-config>
 
-
+<!-- SERVLETS -->
 <servlet>
 	<servlet-name>LoginServlet</servlet-name>
 	<servlet-class>control.LoginServlet</servlet-class>
@@ -38,4 +28,23 @@ http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 	<servlet-name>LogoutServlet</servlet-name>
 	<url-pattern>/site_works/logout</url-pattern>
 </servlet-mapping>
+
+<servlet>
+	<servlet-name>InventoryServlet</servlet-name>
+	<servlet-class>control.InventoryServlet</servlet-class>
+</servlet>
+<servlet-mapping>
+	<servlet-name>InventoryServlet</servlet-name>
+	<url-pattern>/site_works/inventory</url-pattern>
+</servlet-mapping>
+
+<servlet>
+	<servlet-name>ProfileServlet</servlet-name>
+	<servlet-class>control.ProfileServlet</servlet-class>
+</servlet>
+<servlet-mapping>
+	<servlet-name>ProfileServlet</servlet-name>
+	<url-pattern>/site_works/profile</url-pattern>
+</servlet-mapping>
+
 </web-app>
